feat: update Gallery and PoliticalClosing components; enhance layout and video functionality; add new asset for trival

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                 DEFAULT: "#480276",
                 dark: "#6A2BC0",
                 light: "#F3E8FF", // Light violet background
+                trival: "#FF0000", // Red for tribal sidebar background
               },
               // Complementario 2: Naranja (Used for highlights previously gold)
               gold: {
