--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <meta
+      name="facebook-domain-verification"
+      content="bkg60rci0q50eqjmncjrmm6hwz0u0f"
+    />
     <!-- SEO & Metadata -->
     <title>Lesdy Marlody Rodríguez</title>
     <meta
