feat: add Facebook Open Graph meta tags for improved sharing and SEO

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
       name="facebook-domain-verification"
       content="bkg60rci0q50eqjmncjrmm6hwz0u0f"
     />
+    <meta property="og:url" content="https://www.lesdymarlody.com/" />
+    <meta property="fb:app_id" content="1220457766081669" />
+
     <!-- SEO & Metadata -->
     <title>Lesdy Marlody Rodríguez</title>
     <meta
